# macXP

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  xmake.lua
app/: main.c  main.h  module.mk  scaffold.c
dos/: dos_16_types.h  error_codes.h  error_scaffold.c  error_scaffold.h  module.mk
lib/: aclui.exp  advapi32.exp  avicap32.exp  avifil32.exp  bthprops.def  cap.exp  comctl32.exp  comdlg32.exp  crypt32.exp  ctl3d32.exp  dhcpcsvc.exp  dlcapi.exp  dnsapi.exp  faultrep.exp  gdi32.exp  gdiplus.exp  glaux.exp  glu32.exp  icmui.exp  igmpagnt.exp  imagehlp.exp  imm32.exp  iphlpapi.exp  kernel32.exp  lz32.exp  mapi32.exp  mfcuia32.exp  mgmtapi.exp  mpr.exp  mprapi.exp  mqrt.exp  msacm32.exp  mscms.exp  msimg32.exp  msvcp60.exp  msvfw32.exp  mswsock.exp  nddeapi.exp  netapi32.exp  ntdll.exp  (+52 more)
lib/ddk/: Makefile.in  apcups.exp  cfgmgr32.exp  hal.exp  hid.exp  hidparse.exp  mcd.exp  ndis.exp  newdev.exp  ntoskrnl.exp  scsiport.exp  tdi.exp  usbcamd2.exp  videoprt.exp  win32k.exp
lib/directx/: Makefile.in  d3d8.exp  d3d9.exp  d3dim.exp  d3drm.exp  d3dx8d.exp  d3dx9d.exp  d3dxof.exp  ddraw.exp  dinput.exp  dinput8.exp  dinput_private.h  dmoguids.c  dplayx.exp  dpnaddr.exp  dpnet.exp  dpnlobby.exp  dpvoice.exp  dsetup.exp  dsound.exp  dxerr.c  dxguid.c  ksproxy.exp  ksuser.c  ksuser.exp  msdmo.exp  strmiids.c
lib/include/GL/: gl.h  glext.h
lib/include/ddk/: atm.h  ddk_defs.h  hidusage.h  miniport.h  minitape.h  ndisguid.h  netpnp.h  newdev.h  smbus.h  usbcamdi.h  video.h  win2k.h  winddk.h  winnt4.h
lib/include/directx/: d3d9.h  directx_defs.h
lib/include/gdiplus/: gdiplus_defs.h  gdiplusbase.h  gdiplusbrush.h  gdipluscolor.h  gdipluscolormatrix.h  gdipluseffects.h  gdiplusenums.h  gdiplusflat.h  gdiplusgpstubs.h  gdiplusgraphics.h  gdiplusheaders.h  gdiplusimageattributes.h  gdiplusimagecodec.h  gdiplusimaging.h  gdiplusimpl.h  gdiplusinit.h  gdipluslinecaps.h  gdiplusmatrix.h  gdiplusmem.h  gdiplusmetafile.h  gdiplusmetaheader.h  gdipluspath.h  gdipluspen.h  gdiplusstringformat.h  gdiplustypes.h
lib/include/win32/: Makefile  accctrl.h  amvideo.h  atomic.h  audevcod.h  aviriff.h  aygshell.h  basetyps.h  bdatypes.h  cegcc.h.in  commctrl.h  control.h  dbghelp.h  ddeml.h  ddraw.h  dds.h  devguid.h  dsound.h  fiber.h  file.h  gdi.h  icmpapi.h  imagehlp.h  intrin.h  io.h  kfuncs.h  largeint.h  lzexpand.h  make.mk  misc.h  mmreg.h  mmsystem.h  mq.h  msacm.h  msgqueue.h  mswsock.h  nb30.h  nspapi.h  ntdll.h  objsafe.h  (+31 more)
libce/: CellCore.exp  Makefile.in  VBarCall.exp  VoiceCtl.exp  aygshell.exp  btd.exp  bthlink.exp  bthutil.exp  cemapi.exp  ceosutil.exp  ceshell.exp  commctrl.exp  commdlg.exp  coredll.exp  crypt32.exp  cxport.exp  doclist.exp  htmlview.exp  httpd.exp  imaging.exp  imgdecmp.exp  inkx.exp  iphlpapi.exp  mmtimer.exp  msdmo.exp  msmqrt.exp  ndis.exp  note_prj.exp  ntcompat.exp  ole32.exp  oleaut32.exp  phone.exp  pushprxy.exp  richink.exp  secur32.exp  sms.exp  toolhelp.exp  urlmon.exp  webview.exp  wininet.exp  (+4 more)
libce/directx/: Makefile.in  strmiids.c
mk/: common.mk
tools/: check_gdiplus_cpp.sh  check_repo_compile.sh  gdiplus_cpp_smoke.cpp  gdiplus_header_usage.cpp
tools/gdiplus_usage/: gdiplus.cpp  gdiplus_defs.cpp  gdiplusbase.cpp  gdiplusbrush.cpp  gdipluscolor.cpp  gdipluscolormatrix.cpp  gdipluseffects.cpp  gdiplusenums.cpp  gdiplusflat.cpp  gdiplusgpstubs.cpp  gdiplusgraphics.cpp  gdiplusheaders.cpp  gdiplusimageattributes.cpp  gdiplusimagecodec.cpp  gdiplusimaging.cpp  gdiplusimpl.cpp  gdiplusinit.cpp  gdipluslinecaps.cpp  gdiplusmatrix.cpp  gdiplusmem.cpp  gdiplusmetafile.cpp  gdiplusmetaheader.cpp  gdipluspath.cpp  gdipluspen.cpp  gdipluspixelformats.cpp  gdiplusstringformat.cpp  gdiplustypes.cpp
ui/: module.mk
ui/window/: entrypoint.c
